@@ -1,6 +1,7 @@
 x.y.z ()
 =====
 * Be more specific when enabling MIPS assembly routines.
+* Fix wave header reading on big endian machines (#34)
 
 3.1.1 (2017-07-28)
 =====
